--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.4.1"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
